# markon-os

./: .editorconfig  .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs  serial.rs  vga_buffer.rs
src/x86_64/: boot.asm  compile.sh  linker.ld
src/x86_64/grub/: grub.cfg
