[package]
name = "markon_os"
version = "0.1.0"
authors = ["amarkon <adam@markon.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"

[profile.dev]
panic="abort" # disables stack unwinding on panic

[profile.release]
panic="abort" # disables stack unwinding on panic
