[package]
name = "markon_os"
version = "0.1.0"
authors = ["amarkon <adam@markon.codes>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.8.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic="abort" # disables stack unwinding on panic

[profile.release]
panic="abort" # disables stack unwinding on panic
